--- a/res/xml/extras_settings.xml
+++ b/res/xml/extras_settings.xml
@@ -5,15 +5,19 @@
             android:key="bars"
             android:title="@string/bar_cat">
 
-        <PreferenceScreen
-            android:fragment="com.xylon.settings.activities.StatusBarStyle"
-            android:key="status_bar_background_style"
-            android:title="@string/status_bar_background_style" />
+        <Preference
+            android:key="transparency_dialog"
+            android:title="@string/transparency_dialog_title" />
 
-        <PreferenceScreen
-            android:fragment="com.xylon.settings.activities.NavBarStyle"
-            android:key="nav_bar_background_style"
-            android:title="@string/nav_bar_background_style" />
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+                android:key="nav_bar_color"
+                android:title="@string/navigation_bar_color_title"
+                android:defaultValue="#000000" />
+
+        <!--net.margaritov.preference.colorpicker.ColorPickerPreference
+                android:key="stat_bar_color"
+                android:title="@string/status_bar_color_title"
+                android:defaultValue="#000000" /-->
 
         <CheckBoxPreference
             android:key="status_bar_notif_count"
