--- a/res/xml/preference_headers.xml
+++ b/res/xml/preference_headers.xml
@@ -79,6 +79,13 @@
         android:icon="@drawable/ic_xy_settings_quick_toggles"
         android:summary="@string/header_summary" />
 
+     <header
+        android:id="@+id/power_widget_settings"
+        android:fragment="com.xylon.settings.fragments.PowerWidget"
+        android:title="@string/power_widget"
+        android:icon="@drawable/ic_xy_settings_power_widget"
+        android:summary="@string/header_summary" />
+
     <header
         android:id="@+id/status_extras"
         android:fragment="com.xylon.settings.fragments.StatusExtras"
