--- a/res/xml/navigation_bar_settings.xml
+++ b/res/xml/navigation_bar_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <CheckBoxPreference
+        <SwitchPreference
                 android:key="enable_nav_bar"
                 android:title="@string/navbar_enable_bar" />
         <PreferenceCategory
