--- a/res/xml/extras_settings.xml
+++ b/res/xml/extras_settings.xml
@@ -35,9 +35,9 @@
             android:title="@string/custom_carrier_label_title" />
 
         <CheckBoxPreference
-            android:key="statusbar_hidden"
-            android:title="@string/statusbar_hide_title"
-            android:summary="@string/statusbar_hide_summary"
+            android:key="status_bar_auto_hide"
+            android:title="@string/auto_hide_statusbar"
+            android:summary="@string/auto_hide_statusbar_summary"
             android:defaultValue="false" />
 
     </PreferenceCategory>
