--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <CheckBoxPreference
-        android:key="show_screenshot"
-        android:title="@string/title_show_screenshot" />
-
     <ListPreference
         android:key="power_menu_expanded_desktop"
         android:title="@string/power_menu_expanded_desktop"
@@ -12,15 +8,19 @@
         android:entryValues="@array/expanded_desktop_values"
         android:persistent="false" />
 
-    <CheckBoxPreference
+    <SwitchPreference
+        android:key="show_screenshot"
+        android:title="@string/title_show_screenshot" />
+
+    <SwitchPreference
         android:key="show_airplane_toggle"
         android:title="@string/title_show_airplane_toggle" />
 
-    <CheckBoxPreference
+    <SwitchPreference
         android:key="show_navbar_hide"
         android:title="@string/title_show_navbar_hide" />
 
-    <CheckBoxPreference
+    <SwitchPreference
         android:key="show_reboot_keyguard"
         android:title="@string/title_show_reboot_keyguard" />
 
