--- a/res/xml/navigation_bar_settings.xml
+++ b/res/xml/navigation_bar_settings.xml
@@ -31,34 +31,17 @@
                 android:key="advanced_cat"
                 android:title="@string/advanced_settings">
 
-                <ListPreference
-                    android:entries="@array/glow_times_entries"
-                    android:entryValues="@array/glow_times_values"
-                    android:key="glow_times"
-                    android:title="@string/glow_times_title"
-                    android:defaultValue="100|10"
-                    android:persistent="false" />
+        <ListPreference
+            android:entries="@array/glow_times_entries"
+            android:entryValues="@array/glow_times_values"
+            android:key="glow_times"
+            android:title="@string/glow_times_title"
+            android:defaultValue="100|10"
+            android:persistent="false" />
 
-                <!--ListPreference
-                        android:entries="@array/navigation_bar_height_entries"
-                        android:entryValues="@array/navigation_bar_height"
-                        android:key="navigation_bar_height"
-                        android:title="@string/navigation_bar_height_title"
-                        android:summary="@string/navigation_bar_height_summary" />
-
-                <ListPreference
-                        android:entries="@array/navigation_bar_height_landscape_entries"
-                        android:entryValues="@array/navigation_bar_height_landscape"
-                        android:key="navigation_bar_height_landscape"
-                        android:title="@string/navigation_bar_height_landscape_title"
-                        android:summary="@string/navigation_bar_height_landscape_summary" />
-
-                <ListPreference
-                        android:entries="@array/navigation_bar_width_entries"
-                        android:entryValues="@array/navigation_bar_width"
-                        android:key="navigation_bar_width"
-                        android:title="@string/navigation_bar_width_title"
-                        android:summary="@string/navigation_bar_width_summary" /-->
+        <Preference
+            android:key="navbar_height"
+            android:title="@string/navbar_height_title" />
 
         <Preference
             android:key="width_help"
