Ability to hide Volume toggles in Power Menu [2/5]
https://github.com/AOKP/packages_apps_ROMControl/commit/167b53fd45d4896d0c81450ae59f9ca1c33a069f

--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -15,6 +15,10 @@
     <SwitchPreference
         android:key="show_airplane_toggle"
         android:title="@string/title_show_airplane_toggle" />
+        
+    <SwitchPreference
+        android:key="show_volume_state_toggle"
+        android:title="@string/title_show_volume_state_toggle" />
 
     <SwitchPreference
         android:key="show_navbar_hide"
