--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -401,15 +401,18 @@
         <item>@string/ribbon_lockscreen</item>
         <item>@string/ribbon_notifications</item>
         <item>@string/ribbon_quicksettings</item>
-        <item>@string/ribbon_swipe</item>
+        <item>@string/ribbon_swipe_left</item>
+        <item>@string/ribbon_swipe_right</item>
+        <item>@string/ribbon_swipe_bottom</item>
     </string-array>
     <string-array name="ribbon_chooser_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>3</item>
         <item>2</item>
+        <item>4</item>
+        <item>5</item>
     </string-array>
-
     <string-array name="navigation_bar_width_entries" translatable="false">
         <item>@string/size_42_dp_default</item>
         <item>@string/size_40_dp</item>
