--- a/res/xml/status_extras_settings.xml
+++ b/res/xml/status_extras_settings.xml
@@ -40,6 +40,13 @@
             android:summary="@string/auto_hide_statusbar_summary"
             android:defaultValue="false" />
 
+        <CheckBoxPreference
+            android:key="hidden_statusbar_pulldown"
+            android:title="@string/hidden_statusbar_pulldown_title"
+            android:summary="@string/hidden_statusbar_pulldown_summary"
+            android:dependency="status_bar_auto_hide"
+            android:defaultValue="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
