--- a/res/xml/status_extras_settings.xml
+++ b/res/xml/status_extras_settings.xml
@@ -35,17 +35,17 @@
             android:title="@string/custom_carrier_label_title" />
 
         <CheckBoxPreference
-            android:key="status_bar_auto_hide"
-            android:title="@string/auto_hide_statusbar"
-            android:summary="@string/auto_hide_statusbar_summary"
-            android:defaultValue="false" />
-
-        <CheckBoxPreference
             android:key="hidden_statusbar_pulldown"
             android:title="@string/hidden_statusbar_pulldown_title"
             android:summary="@string/hidden_statusbar_pulldown_summary"
-            android:dependency="status_bar_auto_hide"
             android:defaultValue="false" />
+
+        <ListPreference
+            android:key="expanded_desktop"
+            android:title="@string/power_menu_expanded_desktop"
+            android:entries="@array/expanded_desktop_entries"
+            android:entryValues="@array/expanded_desktop_values"
+            android:persistent="false" />
 
     </PreferenceCategory>
 
