Hidden Statusbar Timeout

--- a/res/xml/status_extras_settings.xml
+++ b/res/xml/status_extras_settings.xml
@@ -41,6 +41,14 @@
             android:defaultValue="false" />
 
         <ListPreference
+            android:key="hidden_statusbar_pulldown_timeout"
+            android:entries="@array/hidden_statusbar_pulldown_timeout_entries"
+            android:entryValues="@array/hidden_statusbar_pulldown_timeout_values"
+            android:title="@string/hidden_statusbar_pulldown_timeout_title"
+            android:summary="@string/hidden_statusbar_pulldown_timeout_summary"
+            android:dependency="hidden_statusbar_pulldown" />
+
+        <ListPreference
             android:key="expanded_desktop"
             android:title="@string/power_menu_expanded_desktop"
             android:entries="@array/expanded_desktop_entries"
